plugins {
    id 'net.fabricmc.fabric-loom' version "${loom_version}"
    id 'maven-publish'
    id "me.modmuss50.mod-publish-plugin" version "1.1.0"
}

version = "mc${archive_minecraft_version}-Fabric-${mod_version}"
group = project.maven_group
var realVersion = project.mod_version + '+fabric'

base {
    archivesName = project.archives_base_name
}

repositories {
    maven {
        // location of the maven that hosts JEI files
        name = "Progwml6 maven"
        url = "https://dvs1.progwml6.com/files/maven/"
    }
    maven {
        // location of a maven mirror for JEI files, as a fallback
        name = "ModMaven"
        url = "https://modmaven.dev"
    }
    maven { url = "https://maven.parchmentmc.org" }
    maven { url "https://maven.shedaniel.me/" }
    maven { url "https://maven.terraformersmc.com/releases/" }
    // Trinkets
    maven {
        name = "TerraformersMC"
        url = "https://maven.terraformersmc.com/"
    }
    maven {
        name = "Ladysnake Libs"
        url = 'https://maven.ladysnake.org/releases'
    }

    maven {
        url "https://cursemaven.com"
        content {
            includeGroup "curse.maven"
        }
    }
    maven { url = "https://api.modrinth.com/maven" }
    flatDir { dir 'libs' }
    // Add repositories to retrieve artifacts from in here.
    // You should only use this when depending on other mods because
    // Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
    // See https://docs.gradle.org/current/userguide/declaring_repositories.html
    // for more information about repositories.
}

// Include resources generated by data generators.
sourceSets {
    main.resources.srcDirs += "src/generated/resources"
}

dependencies {
    // To change the versions see the gradle.properties file
    minecraft "com.mojang:minecraft:${project.minecraft_version}"
    implementation "net.fabricmc:fabric-loader:${project.loader_version}"

    // Fabric API. This is technically optional, but you probably want it anyway.
    implementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"

    // PSA: Some older mods, compiled on Loom 0.2.1, might have outdated Maven POMs.
    // You may need to force-disable transitiveness on them.
    implementation("dev.architectury:architectury-fabric:${project.architectury_version}")
    api("me.shedaniel.cloth:cloth-config-fabric:${project.cloth_config_version}") {
        exclude(group: "net.fabricmc.fabric-api")
    }
    implementation "com.terraformersmc:modmenu:${project.modmenu_version}"

    compileOnly "me.shedaniel:RoughlyEnoughItems-fabric:${project.rei_version}"
    runtimeOnly "me.shedaniel:RoughlyEnoughItems-fabric:${project.rei_version}"

    compileOnlyApi("mezz.jei:jei-${project.minecraft_version}-common-api:${project.jei_version}")
    implementation("mezz.jei:jei-${project.minecraft_version}-fabric:${project.jei_version}")

    implementation "libs:Kiwi-mc26.1-Fabric-26.0.4"
    annotationProcessor "libs:Kiwi-mc26.1-Fabric-26.0.4"
//    implementation "maven.modrinth:kiwi:${project.kiwi_version}+fabric"
//    annotationProcessor "maven.modrinth:kiwi:${project.kiwi_version}+fabric"
    implementation "libs:Lychee-mc26.1-Fabric-26.0.1"
//    implementation "maven.modrinth:lychee:${project.lychee_version}+fabric"
    implementation "maven.modrinth:jade:${project.jade_version}+fabric"

    // do not upgrade, otherwise it will crash
//    implementation "dev.emi:trinkets:${project.trinkets_version}"
//    implementation "curse.maven:selene-499980:4981682"
//    implementation "maven.modrinth:supplementaries:8rvsAEun"
//    implementation "maven.modrinth:farmers-delight-fabric:QXYNitXw"
//    implementation "curse.maven:farmers-delight-refabricated-993166:5219672"
//    implementation "vectorwing:FarmersDelight-Refabricated:1.20.1-2.0.8"

    implementation "maven.modrinth:debugutils:26.1.2-1.0.9-fabric"
//    implementation "maven.modrinth:suggestion-tweaker:1.20-1.5.1+fabric"
    implementation "maven.modrinth:advancement-info:26.1.1-fabric-1.3.1"
}

loom {
    accessWidenerPath = file("src/main/resources/${project.mod_id}.classtweaker")
}

fabricApi {
    configureDataGeneration {
        client = true
        modId = project.mod_id
        client = true
        outputDirectory = file("src/generated/resources")
        createSourceSet = true
//        strictValidation = true //TODO enable it?
    }
}

processResources {
    duplicatesStrategy = DuplicatesStrategy.WARN
    inputs.property "version", realVersion

    filesMatching("fabric.mod.json") {
        expand "version": realVersion
    }
}

tasks.withType(JavaCompile).configureEach {
    it.options.encoding = "UTF-8"
    it.options.release = 25
}

java {
//    withSourcesJar()

    sourceCompatibility = JavaVersion.VERSION_25
    targetCompatibility = JavaVersion.VERSION_25
}

jar {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE

    exclude "/assets/${project.mod_id}/lang/en_us.existing.yaml"
    exclude "/assets/${project.mod_id}/textures/entity/bee/bee.png"
    exclude "/assets/${project.mod_id}/textures/entity/bee/bee_angry.png"
    exclude "/assets/${project.mod_id}/textures/entity/bee/bee_nectar.png"
    exclude "/assets/${project.mod_id}/textures/entity/bee/bee_angry_nectar.png"
    exclude '**/*.bat'
    exclude '**/*.psd'
    exclude '**/*.py'
    from("LICENSE") {
        rename { "${it}_${project.archives_base_name}" }
    }
}

configurations.all {
    resolutionStrategy {
        force "dev.architectury:architectury-fabric:${project.architectury_version}"
    }
}

publishMods {
    file = jar.archiveFile
    changelog = file('CHANGELOG.md').exists() ? file('CHANGELOG.md').text : ''
    type = ['release': STABLE, 'beta': BETA, 'alpha': ALPHA][release_type]
    modLoaders.add("fabric")
    modLoaders.add("quilt")
    displayName = "[Fabric ${supported_version}] ${mod_version}"
    version = realVersion

    curseforge {
        projectId = "355467"
        accessToken = providers.environmentVariable("CURSE_TOKEN")
        minecraftVersions.add(minecraft_version)
        minecraftVersions.add("26.1")
        minecraftVersions.add("26.1.1")
        requires("fabric-api")
        requires("kiwi-fabric")
        requires("lychee-fabric")
        optional("jade")
    }
    modrinth {
        projectId = "4bZDWNlG"
        accessToken = providers.environmentVariable("MODRINTH_TOKEN")
        minecraftVersions.add(minecraft_version)
        minecraftVersions.add("26.1")
        minecraftVersions.add("26.1.1")
        requires("fabric-api")
        requires("kiwi-fabric")
        requires("lychee-fabric")
        optional("jade")
    }
}
